<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Vista.DetallesActivity">

    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/imgproducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtProducto"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtProducto"
        android:textColor="#1E19CA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imgProducto"
        app:layout_constraintStart_toStartOf="@+id/imgProducto"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="248dp"
        android:layout_height="276dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtDescripcion"
        android:inputType="textMultiLine"
        android:textColor="#162EC5"
        android:textColorHint="#162EC5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/txtProducto"
        app:layout_constraintStart_toStartOf="@+id/txtProducto"
        app:layout_constraintTop_toBottomOf="@+id/txtProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>