<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopantalla"
    tools:context=".Vista.ActualizarActivity">

    <EditText
        android:id="@+id/txtNvaPass"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtNvaPass"
        android:inputType="textPassword"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtConfPass"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtConfPass"
        android:inputType="textPassword"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtNvaPass"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/txtNvaPass"
        app:layout_constraintTop_toBottomOf="@+id/txtNvaPass" />

    <Button
        android:id="@+id/btnActualizar"
        style="@style/btnAplication"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="84dp"
        android:text="@string/btnActualizar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtConfPass"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/txtConfPass"
        app:layout_constraintTop_toBottomOf="@+id/txtConfPass" />
</androidx.constraintlayout.widget.ConstraintLayout>