<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopantalla"
    tools:context=".Vista.PrincipalActivity">

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="106dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgLogo"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvLista"
        android:layout_width="408dp"
        android:layout_height="535dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="168dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="176dp" />

    <Button
        android:id="@+id/btnBuscar"
        style="@style/btnAplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btnBuscar"
        android:textColor="#0E28A8"
        app:layout_constraintEnd_toEndOf="@+id/txtUser"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtUser"
        app:layout_constraintTop_toBottomOf="@+id/txtUser" />

    <EditText
        android:id="@+id/txtBuscar"
        style="?attr/editTextStyle"
        android:layout_width="215dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/txtBuscar"
        android:inputType="text"
        android:text=""
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imgUser"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />
</androidx.constraintlayout.widget.ConstraintLayout>